# CHEHAB

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  README_updated.md  cmake_install.cmake  docker-compose.yml  environment.yml  expression.txt  fhecompiler.hpp  info.rs  main.cpp  output.txt  outputs.txt  polynomials_results.csv  results copy.csv  results.csv  resultsEGraph.csv  results_16 copy.csv  results_16.csv  results_32.csv  results_4.csv  results_8.csv  results_EGraph.csv  results_EGraph_current.csv  results_EGraph_updated.csv  results_RL.csv  results_best_RL.csv  run_benchmarks.py  run_polynomials_benchmarks.py  simplified.txt  test  test.cpp  test1  test1.cpp
benchmarks/: CMakeLists.txt  box_blur.cpp  declarations.py  dot_product.cpp  global_variables.cpp  global_variables.hpp  gx_kernel.cpp  l2_distance.cpp  linear_regression.cpp  matrix_mul.cpp  matrix_mul.hpp  matrix_mul.hpp1.dot  matrix_mul.hpp2.dot  matrix_mul2.cpp  matrix_mul3.cpp  matrix_mul_plain.cpp  readme  reduction.cpp  robert_cross.cpp  script.py  sharpening_filter.cpp  test1.cpp  test1.hpp  test1.hpp1.dot  test1.hpp2.dot  test1_seal.cpp  utils.cpp  utils.hpp
benchmarks/CryptoNets/: CMakeLists.txt  convert_to_dsl.py
benchmarks/box_blur/: CMakeLists.txt  box_blur.cpp  box_blur.hpp  box_blur.hpp1.dot  box_blur.hpp2.dot  box_blur.hpp3.dot  box_blur.hpp4.dot  box_blur.txt  box_blur_checks.cpp  box_blur_final_ir.dot  box_blur_init_ir.dot  box_blur_io_example.txt  box_blur_noopt_ir.dot  box_blur_opt_ir.dot  box_blur_rand_example.txt  compile_times_ops.txt  fhe_io_example.txt  generate_box_blur.py
benchmarks/box_blur_porcupine/: CMakeLists.txt  box_blur.cpp  box_blur_checks.cpp  box_blur_final_ir.dot  box_blur_init_ir.dot  box_blur_io_example.txt  box_blur_noopt_ir.dot  box_blur_opt_ir.dot  box_blur_rand_example.txt  comparaison_exec_times.ipynb  compile_times_ops.txt  results.txt  script_raw_times.sh
benchmarks/box_blur_variable_size/: box_blur.cpp  box_blur_init_ir.dot  box_blur_rand_example.txt
benchmarks/cryptonets/: CMakeLists.txt  b1.txt  b4.txt  b8.txt  compile_times_cf.txt  compile_times_cf_cse.txt  compile_times_cse.txt  compile_times_cse_fold.txt  compile_times_depth_bu.txt  compile_times_depth_td.txt  compile_times_joined_bu.txt  compile_times_joined_td.txt  compile_times_noopt.txt  compile_times_ops_bu.txt  compile_times_ops_td.txt  cost_depth_pregress.ipynb  cryptonets.cpp  cryptonets_checks.cpp  cryptonets_rand_example.txt  fhe_io_example.txt  generate_cryptonets.py  ml.cpp  ml.hpp  result31.txt  result31_.txt  result32.txt  results1.txt  results2.txt  script1.sh  script2.sh  script3.sh  script_compilation_info.sh  script_progress_over_iter.sh  script_raw_times.sh  w1.txt  w4.txt  w8.txt
benchmarks/discrete_cosin_transform/: CMakeLists.txt  discrete_cosin_transform.cpp  fhe_io_example.txt
benchmarks/dot_product/: CMakeLists.txt  compile_times_16_ops.txt  compile_times_256_ops.txt  compile_times_4096_joined_log2_reduct.txt  compile_times_4096_joined_log2_reduction.txt  dot_product.cpp  dot_product_checks.cpp  dot_product_final_ir.dot  dot_product_init_ir.dot  dot_product_io_example.txt  dot_product_noopt_ir.dot  dot_product_opt_ir.dot  dot_product_rand_example.txt  fhe_io_example.txt  generate_dot_product.py
benchmarks/dot_product_porcupine/: CMakeLists.txt  dot_product.cpp  dot_product_final_ir.dot  dot_product_init_ir.dot  dot_product_rand_example.txt
benchmarks/gx_kernel/: CMakeLists.txt  compile_times_ops.txt  fhe_io_example.txt  generate_gx_kernel.py  gx_kernel.cpp  gx_kernel.hpp  gx_kernel.hpp1.dot  gx_kernel.hpp2.dot  gx_kernel.hpp3.dot  gx_kernel_checks.cpp  gx_kernel_final_ir.dot  gx_kernel_init_ir.dot  gx_kernel_io_example.txt  gx_kernel_naive_ir.dot  gx_kernel_noopt_ir.dot  gx_kernel_opt_ir.dot  gx_kernel_rand_example.txt
benchmarks/gx_kernel_porcupine/: CMakeLists.txt  gx_kernel.cpp  gx_kernel_final_ir.dot  gx_kernel_init_ir.dot  gx_kernel_rand_example.txt
benchmarks/gy_kernel/: CMakeLists.txt  compile_times_joined.txt  fhe_io_example.txt  generate_gy_kernel.py  gy_kernel.cpp  gy_kernel_checks.cpp  gy_kernel_final_ir.dot  gy_kernel_init_ir.dot  gy_kernel_io_example.txt  gy_kernel_noopt_ir.dot  gy_kernel_opt_ir.dot  gy_kernel_rand_example.txt
benchmarks/hamming_dist/: CMakeLists.txt  compile_times_16_joined_log2_reduct.txt  compile_times_256_joined_log2_reduct.txt  compile_times_4096_joined_log2_reduct.txt  fhe_io_example.txt  generate_hamming_dist.py  hamming_dist.cpp  hamming_dist_checks.cpp  hamming_dist_io_example.txt  hamming_dist_noopt_ir.dot  hamming_dist_opt_ir.dot
benchmarks/hamming_dist_porcupine/: CMakeLists.txt  compile_times_ops.txt  hamming_dist.cpp  hamming_dist_checks.cpp  hamming_dist_io_example.txt  hamming_dist_noopt_ir.dot  hamming_dist_opt_ir.dot  script_raw_times.sh
benchmarks/hamming_distance/: CMakeLists.txt  hamming_distance.cpp  hamming_distance_final_ir.dot  hamming_distance_init_ir.dot  hamming_distance_rand_example.txt
benchmarks/hamming_distance_porcupine/: CMakeLists.txt  hamming_distance.cpp  hamming_distance_checks.cpp  hamming_distance_final_ir.dot  hamming_distance_init_ir.dot  hamming_distance_io_example.txt  hamming_distance_noopt_ir.dot  hamming_distance_opt_ir.dot  hamming_distance_rand_example.txt  results.txt
benchmarks/l2_distance/: CMakeLists.txt  compile_times_16_joined_log2_reduct.txt  compile_times_256_joined_log2_reduct.txt  compile_times_4096_joined_log2_reduct.txt  fhe_io_example.txt  generate_l2_distance.py  generate_l2_distance_benchmark.py  l2_distance.cpp  l2_distance_checks.cpp  l2_distance_final_ir.dot  l2_distance_init_ir.dot  l2_distance_io_example.txt  l2_distance_noopt_ir.dot  l2_distance_opt_ir.dot  l2_distance_rand_example.txt
benchmarks/lin_reg/: CMakeLists.txt  fhe_io_example.txt  generate_lin_reg.py  generate_lin_reg_benchmark.py  lin_reg.cpp
benchmarks/linear_reg/: CMakeLists.txt  compile_times_ops.txt  linear_reg.cpp  (+4 more)
egraphs/: Cargo.toml
fheco/: CMakeLists.txt  fhecompiler.cpp  fhecompiler.hpp  todo.txt
ufhe/: CMakeLists.txt
(+1146 files in other folders)
