cmake_minimum_required(VERSION 3.13)

project(FHECompiler VERSION 1.0 LANGUAGES CXX)

add_subdirectory(fheco)
add_subdirectory(benchmarks/box_blur)
add_subdirectory(benchmarks/box_blur_porcupine)
add_subdirectory(benchmarks/cryptonets)
add_subdirectory(benchmarks/dot_product)
add_subdirectory(benchmarks/dot_product_porcupine)
add_subdirectory(benchmarks/gx_kernel)
add_subdirectory(benchmarks/gx_kernel_porcupine)
add_subdirectory(benchmarks/gy_kernel)
add_subdirectory(benchmarks/hamming_distance)
add_subdirectory(benchmarks/hamming_distance_porcupine)
add_subdirectory(benchmarks/l2_distance)
add_subdirectory(benchmarks/linear_reg_porcupine)
add_subdirectory(benchmarks/matrix_mul)
add_subdirectory(benchmarks/poly_reg_porcupine)
add_subdirectory(benchmarks/roberts_cross)
add_subdirectory(benchmarks/roberts_cross_porcupine)
add_subdirectory(benchmarks/sharpening_filter_heco)
add_subdirectory(benchmarks/sobel)
