[package]
name = "egraphs-simplification"
version = "0.1.0"
authors = ["Zakaria Hebbal <jz_hebbal@esi.dz> <zh2977@nyu.edu>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "egraphslib"

[dependencies]
egg = "0.6.0"
assert_approx_eq = "1.1.0"
itertools = "0.9.0"
clap = "2.33.2"
lexpr = "0.2.5"
libc = "0.2.98"
