[package]
name = "egraphs-vectorization"
version = "0.1.0"
authors = ["Zakaria Hebbal <jz_hebbal@esi.dz> <zh2977@nyu.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "egraphslib"

[dependencies]
egg = "0.9.5"
assert_approx_eq = "1.1.0"
itertools = "0.9.0"
clap = "2.33.2"
lexpr = "0.2.5"
libc = "0.2.98"
indexmap = "1.8"
rand = "0.8"
log = "0.4"
rayon = "1.5"
